# ed25519

./: .gitignore  CMakeLists.txt  readme.md
tests/: test.c
